# zkperf

./: .gitignore  README.md
circom/: bench.sh  bench_rapidsnark.sh  setup.sh  writeup.md
circom/breakdown/: breakdown.py  draw.py
circom/ecdsa/: benchmark.sh  benchmark_rapidsnark.sh  breakdown.sh  configure.sh
circom/ecdsa/circuits/: bigint.circom  ecdsa.circom  ecdsa_verify.circom  ecdsa_verify_no_precompute.circom  secp256k1.circom
circom/ecdsa/data/: input.json
circom/merkle_tree/: benchmark.sh  benchmark_poseidon.sh  benchmark_rapidsnark.sh  breakdown.sh  configure.sh
circom/merkle_tree/data/: mt_poseidon_input.json  mt_verifier_input.json
circom/ml/: .gitignore  README.md
circom/snarkjs/: arithmetic.js  cli.js  fft.js  msm.js
circom/snarkjs/src/: groth16_prove.js  groth16_verify.js  wtns_calculate.js
circom/snarkjs/test/: fullprocess.js
circom/zkml/: breakdown_dlrm.sh  breakdown_mnist.sh  configure.sh  verify_dlrm.sh  verify_dlrm_rapidsnark.sh  verify_mnist.sh  verify_mnist_rapidsnark.sh
circom/zkml/circuits/: DLRMDot.circom  DLRMSmall.circom  mnist.circom  mnist_latest_precision_test.circom  mobilenet_25_128.circom  mobilenet_25_128_no_relu.circom  tiny_mobilenet_test.circom
circom/zkml/lib/: Conv2DDW.circom  Conv2DDWReLU.circom  Conv2DReLU.circom  DenseReLUScaleDown.circom  DenseScaleDown.circom  MNConv2D.circom  MNConv2DReLU.circom  (+3 more)
gnark/: go.mod  go.sum  main.go  run.sh  setup.sh
gnark/ecdsa/: ecdsa.go  ecdsa.sh  ecdsa_test.go
gnark/merkle/: merkle_circuit.go  merkle_utils.go
gnark/merkleposeidon/: merkleposeidon_circuit.go  merkleposeidon_utils.go
gnark/ml/: converted_dlrm_checked_512.json  converted_mnist_model_sf512.json  dlrm_circuit.go  dlrm_test.go  dlrm_utils.go  freivalds.go  helper.go  linear.go  mnist_circuit.go  mnist_inp.json  mnist_utils.go  non_linear.go  shape.go
gnarkcircuits/: ecdsa.go  ecdsa_test.go  go.mod  go.sum  merkle.go  merkle_test.go
halo2/: bench.sh  writeup.md
halo2/breakdown/: breakdown.py  draw.py  draw.sh
halo2/ecdsa/: Cargo.toml  README.md  benchmark.sh  breakdown.sh  sample.json
halo2/ecdsa/ecdsa/: Cargo.toml
halo2/ecdsa/ecdsa/src/: lib.rs  test.rs
halo2/ecdsa/halo2wrong/: Cargo.toml
halo2/ecdsa/halo2wrong/src/: utils.rs
halo2/ezkl/: Cargo.toml  bench_dlrm.sh  bench_mnist.sh  configure.sh
halo2/merkle_tree/: Cargo.toml  benchmark.sh  breakdown.sh  configure.sh
halo2/merkle_tree/data/: mt_keccak.json
halo2/merkle_tree/src/: chip.rs  circuit.rs  cmd.rs  keccak_merkle.rs  keccak_one.rs  lib.rs  main.rs  scaffold.rs  test_circuit.rs  utils.rs
halo2/merkle_tree/src/hash/: hash_spec.rs  mod.rs  poseidon.rs  poseidon_params.rs  poseidon_spec.rs
halo2/zkml/: benchmark_dlrm.sh  benchmark_mnist.sh  breakdown.sh  col_experiments.sh  col_experiments_breakdown.sh  configure.sh
microbenches/lookup/halo2/: Cargo.toml
microbenches/lookup/plonky2/: .gitignore  Cargo.toml
microbenches/lookup/plonky2/src/: lookup.rs  main.rs
plonky2/: bench.sh  col_sweep.sh  sweep.sh
plonky2/ecdsa/: .gitignore  Cargo.toml
plonky2/ecdsa/plonky2-u32/src/gates/: range_check_u32.rs  subtraction_u32.rs
plonky2/ecdsa/src/gadgets/: biguint.rs  glv.rs  nonnative.rs
plonky2/merkle_tree/: .gitignore  Cargo.toml
plonky2/merkle_tree/keccak/: Cargo.toml
plonky2/merkle_tree/keccak/src/: simple_merkle_tree.rs
plonky2/merkle_tree/keccak/src/hash/: mod.rs
plonky2/merkle_tree/keccak/src/u32/gadgets/: arithmetic_u32.rs
plonky2/merkle_tree/keccak/src/u32/gates/: add_many_u32.rs  uninterleave_to_u32.rs
plonky2/merkle_tree/poseidon/: Cargo.toml
plonky2/merkle_tree/poseidon/src/mmr/: merkle_mountain_ranges.rs  naive_mmr_plonky2_verifier.rs
plonky2/merkle_tree/poseidon/src/simple_merkle_tree/: simple_merkle_tree.rs
plonky2/merkle_tree/src/: circuit.rs  lib.rs
plonky2/merkle_tree/src/hash/: keccak256.rs  merkle_utils.rs  mod.rs  sha256_merkle.rs  simple_merkle_tree.rs  types.rs
plonky2/merkle_tree/src/nonnative/gadgets/: biguint.rs
plonky2/merkle_tree/src/u32/gadgets/: arithmetic_u32.rs  interleaved_u32.rs
plonky2/merkle_tree/src/u32/gates/: arithmetic_u32.rs  interleave_u32.rs  subtraction_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
plonky2/ml/: .gitignore  Cargo.toml
plonky2/ml/examples/dlrm/: config.msgpack  dlrm.config  dlrm_mlp_simplified_float32.tflite  model.msgpack
plonky2/ml/examples/mnist/: mnist.config  mnist.inp  mnist.model
plonky2/ml/plonky2/: Cargo.toml
plonky2/ml/plonky2/examples/: bench_recursion.rs
plonky2/ml/plonky2/src/: lookup_test.rs
plonky2/ml/plonky2/src/gadgets/: lookup.rs
plonky2/ml/plonky2/src/gates/: lookup.rs  lookup_table.rs
plonky2/ml/plonky2/src/hash/: hashing.rs
plonky2/ml/plonky2/src/plonk/: circuit_builder.rs  prover.rs  vanishing_poly.rs
plonky2/ml/plonky2/src/recursion/: dummy_circuit.rs  recursive_verifier.rs
plonky2/ml/plonky2/src/util/: timing.rs
plonky2/ml/plonky2/src/util/serialization/: gate_serialization.rs  generator_serialization.rs  mod.rs
plonky2/ml/python/: converter.py  read_msgpack.py
plonky2/ml/src/: gadgets.rs  gates.rs  layers.rs  lib.rs  model.rs  utils.rs
plonky2/ml/src/gadgets/: bias_div_round_plonky2.rs  bias_div_round_relu6.rs  bias_div_round_relu6_plonky2.rs  dot_prod.rs  gadget.rs  input_lookup.rs  nonlinear.rs  var_div.rs
plonky2/ml/src/gadgets/nonlinear/: logistic.rs  non_linearity.rs  relu.rs
plonky2/ml/src/gates/: adder.rs  bias_div_round.rs  comparison.rs  dot_prod.rs  var_div.rs
plonky2/ml/src/layers/: add.rs  avg_pool_2d.rs  batch_mat_mul.rs  conv2d.rs  dag.rs  fully_connected.rs  layer.rs  logistic.rs  mul.rs  noop.rs  shape.rs
plonky2/ml/src/layers/arithmetic/: add.rs  mul.rs
plonky2/ml/src/layers/shape/: concatenation.rs  gather.rs  pack.rs  reshape.rs  split.rs  transpose.rs
plonky2/ml/src/utils/: helpers.rs  loader.rs  proving.rs
plonky2/plonky2/: Cargo.toml
plonky2/scripts/: breakdown.py  plot_breakdowns.py  plot_col_sweep.py
scripts/: accuracy_stats.py  install.sh  mnist_accuracy.sh  mnist_accuracy_setup.sh  mnist_data_to_npy.py  setup.sh  tflite_output.py
(+75 files in other folders)
