[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "=0.3.0", default-features = false}
bincode = "1.3.3"
itertools = "0.10.5"
rand = "=0.8"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"
halo2-base = { git = "https://github.com/span14/halo2-lib", branch="temp", default-features = false, features=["halo2-axiom", "zkml"] }
axiom-eth = { git = "https://github.com/span14/axiom-eth.git", branch="community-edition", default-features = false, features = ["halo2-axiom", "aggregation", "evm", "clap"] }
clap="4.0.13"
env_logger = "=0.10"
snark-verifier-sdk = { git = "https://github.com/span14/snark-verifier.git", branch="temp", default-features = false, features = ["loader_halo2"] }

[features]
print-trace = ["halo2-base/profile"]