[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.3"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
env_logger = "0.9.0"
itertools = { version = "0.11.0", default-features = false }
jemallocator = "0.5.0"
log = "0.4.20"
plonky2_maybe_rayon = { version = "0.1.1", default-features = false }
num = { version = "0.4", default-features = false }
plonky2 = { path="../plonky2", default-features = true, features=["std"] }
plonky2_u32 = { path="plonky2-u32", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }

[patch.crates-io]
plonky2 = { path = "../plonky2", default-features = true }