[package]
name = "plonky2_crypto"
description = "Crypto gadgets for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
jemallocator = "0.5.0"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2/", package="plonky2", rev = "44af80f" }
plonky2_field = { git="https://github.com/0xPolygonZero/plonky2", package="plonky2_field", rev="44af80f" }
plonky2_maybe_rayon = { version = "0.1" }
plonky2_util = { version = "0.1.0", default-features = false }
itertools = "0.10.5"
num = { version = "0.4.0", default-features = false }
serde = "1.0.152"
serde_with = { version = "2.2.0", features = ["hex"] }
rayon = { version = "1.5.3" }
hex = { version = "0.4.3" }
rand = "0.8.5"

[dev-dependencies]
debug_print = { version = "1.0.0" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"
criterion = "0.3"
