[package]
name = "zkml"
version = "0.0.1"
edition = "2021"
description = "Zero-knowledge machine learning"
license = "LICENSE"
readme = "README.md"
exclude = [
  "params",
  "params_kzg",
  "python",
]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
bitvec = "1.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
ndarray = "0.15.6"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.15.0"
plonky2 = { git="https://github.com/0xPolygonZero/plonky2", package="plonky2", rev="41a29f069b6731c4af2644337959fbad8c771c77" }
plonky2_field = { git="https://github.com/0xPolygonZero/plonky2", package="plonky2_field", rev="41a29f069b6731c4af2644337959fbad8c771c77" }
rand = "0.8.5"

rmp-serde = "1.1.1"
rounded-div = "0.1.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.85"
wav = "1.0.0"

