[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "^0.4.0", default-features = false}
ecc = { path = "../ecc", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
subtle = { version = "2.3", default-features = false }
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

[features]
default = []
circuit-params = ["ecc/circuit-params"]
print-trace=["ark-std/print-trace"]